2009-06-11  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/xgetXXbyYY.c, libmisc/xgetpwnam.c, libmisc/xgetgrnam.c,
	libmisc/xgetpwuid.c, libmisc/xgetgrgid.c, libmisc/xgetspnam.c: Do
	not limit the size of the buffer to hold the group or user
	structure. It used to be limited to 16k, which caused issues with
	groups having many users.

2009-06-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c, man/su.1.xml: The default behavior (without -p or
	--login) is to copy most of the environment variables. Revert a
	previous change and update the documentation.

2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* man/passwd.5.xml, man/shadow.5.xml: Document the passwd- and
	shadow- files.

2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: Preserve the DISPLAY and XAUTHORITY environment
	variables, even with --login. This was not the case before in the
	PAM version.

2009-06-06  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c, src/groupmod.c, src/groupadd.c, src/faillog.c:
	Fix typos. Take this opportunity to split the usage messages into
	smaller messages (one per option).
	* src/pwck.c: Fix typo.

2009-06-05  Petri Koistinen  <petri.koistinen@iki.fi>

	* man/passwd.1.xml: The short option for --mindays is -n, not -m.

2009-06-04  Mike Frysinger  <vapier@gentoo.org>

	* .gitignore, man/.gitignore, src/.gitignore: Added .gitignore
	files.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/su.1.xml: Use <option> for the login.defs options.
	* man/su.1.xml: Improve the documentation of the su behavior
	regarding environment variables.
	* man/su.1.xml: Document that the login.defs file is used.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* man/login.1.xml: Document that the login.defs file is used.

2009-06-04  Nicolas François  <nicolas.francois@centraliens.net>
